@@ -1,13 +1,0 @@
-{% ckan_extends %}
-
-{% block primary %}
-  <article class="module">
-    <div class="module-content">
-      {% block about %}
-          DCOR is the deformability cytometry open repository.
-      {% endblock %}
-    </div>
-  </article>
-{% endblock %}
-
-{% block secondary %}{% endblock %}
