@@ -1,3 +1,0 @@
-{% ckan_extends %}
-
-{% block title %} {{ g.site_title }} {% endblock %}
