@@ -1,6 +1,6 @@
 {% set intro = g.site_intro_text %}
 
-<div class="module-content box">
+<div class="module-promotion card box">
   <div>
     {% if intro %}
       {{ h.render_markdown(intro) }}
@@ -20,7 +20,7 @@
     <section class="featured media-overlay hidden-xs">
       {% block home_image_content %}
         <a class="media-image" href="{{ h.url_for_static('/images/dcor_tiles.png') }}">
-          <img class="img-responsive" src="{{ h.url_for_static('/images/dcor_tiles_420.jpg') }}" alt="Placeholder" width="420" height="152" />
+          <img class="img-fluid" src="{{ h.url_for_static('/images/dcor_tiles_420.jpg') }}" alt="Placeholder" width="420" height="152" />
         </a>
       {% endblock %}
     </section>
