@@ -10,9 +10,8 @@
       {% block package_archive_notice %}
       {% endblock %}
 
-      {% block resource_read_title %}<h1 class="page-heading">{{ h.resource_display_name(res) | truncate(50) }}</h1>
-      {% endblock %}
-    
+      {% block resource_read_title %}<h1 class="page-heading">{{ h.resource_display_name(res) | truncate(50) }}</h1>{% endblock %}
+
       {% block resource_read_url %}
       {% endblock %}
 
