@@ -1,5 +1,6 @@
 0.7.0
  - ref: use proper theming in CKAN 2.10
+ - ref: migrate templates to CKAN 2.10
 0.6.1
  - maintenance release
 0.6.0
